--- a/css/index.css
+++ b/css/index.css
@@ -60,3 +60,8 @@ text-align: center;
 }
 a{text-decoration: none;
 color: darkred;}
+@media screen and (max-with:450px){
+    #foto{width: unset;}
+    section{margin: 5px;}
+    
+}
