--- a/css/index.css
+++ b/css/index.css
@@ -60,8 +60,8 @@ text-align: center;
 }
 a{text-decoration: none;
 color: darkred;}
-@media screen and (max-with:400px){
-    #foto{width: unset;}
+@media screen and (max-width:450px){
+    #foto{width: 100px;}
     section{margin: 5px;}
-    
+    body{font-size: small;}
 }
