--- a/css/index.css
+++ b/css/index.css
@@ -65,3 +65,8 @@ color: darkred;}
     section{margin: 5px;}
     body{font-size: small;}
 }
+@media screen and (max-width:500px){
+    #foto{width: 100px;}
+    section{margin: 5px;}
+    body{font-size: smaller;}
+}
